test/good/generics/basic05.px

func array<T>(a: T, b: T): [T] def
    return [a, b]

print array(false, true)[1]
print array("a", "b")[0]
