test/bad/generics/def13.px

func f<T>() T def
    if false do
        return []
    return ""

print f()
